Update src/test/java/com/exasol/adapter/jdbc/BaseTableMetadataReaderTest.java
Co-authored-by: Sebastian Bär <sebastian.baer@exasol.com>